# ActiveBrownianInfered

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  pointOnSphere.h  simul.cpp  simul.h  state.cpp  state.h  visu.cpp  visu.h
cmake_modules/: FindMKL.cmake
src/: boxes.cpp  boxes.h  infered.cpp  infered.h  main.cpp  observables.cpp  observables.h  pointOnSphere.cpp  pointOnSphere.h  simul.cpp  simul.h  state.cpp  state.h  state3d.cpp  state3d.h  visu3d.cpp  visu3d.h
src/visu/: visu.cpp  visu.h  visu3d.h
